# faris

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  attack_bitboards.cpp  attack_bitboards.h  board.h  fen.cpp  fen.h  main.cpp  movegen.cpp  movegen.h  perft.cpp  perft.h  search.cpp  search.h  transposition.cpp  transposition.h  uci.cpp  uci.h  utilities.cpp  utilities.h
tests/: perft_divide.cpp  perft_divide.h  perft_test_case.cpp  perft_test_case.h  perft_test_data.txt  stockfish_divide.cpp  stockfish_divide.h  stockfish_divide.sh  test_perft.cpp
tools/magic/: CMakeLists.txt  magicgen.cpp
